--- a/.github/workflows/admin-system.yml
+++ b/.github/workflows/admin-system.yml
@@ -72,7 +72,7 @@ jobs:
         username: ${{ vars.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-    needs: Built
+    needs: Build
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
