--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,11 +53,11 @@ if(BUILD_PROJECT)
 
         add_executable(${PROJECT_NAME}
                 ${CMAKE_SOURCE_DIR}/app/source/main.cpp
-                ${CMAKE_SOURCE_DIR}/app/source/admin-system.cpp
         )
 
         target_include_directories(${PROJECT_NAME} PRIVATE
                 ${CMAKE_SOURCE_DIR}/app/include
+                ${CMAKE_SOURCE_DIR}/gui/include
                 ${CMAKE_SOURCE_DIR}/features/include
                 ${GTKMM_INCLUDE_DIRS}
         )
@@ -70,12 +70,20 @@ if(BUILD_PROJECT)
         target_link_libraries(${PROJECT_NAME} PRIVATE ${GTKMM_LIBRARIES})
         target_link_directories(${PROJECT_NAME} PRIVATE ${GTKMM_LIBRARY_DIRS})
 
+        if(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/gui)
+            add_subdirectory(${CMAKE_SOURCE_DIR}/gui)
+            target_link_libraries(${PROJECT_NAME} PRIVATE gui)
+        else()
+            message(STATUS "Directory features, does not exist")
+        endif()
+
         #    if(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/features)
         #        add_subdirectory(${CMAKE_SOURCE_DIR}/features)
         #        target_link_libraries(${PROJECT_NAME} PRIVATE features)
         #    else()
         #        message(STATUS "Directory features, does not exist")
         #    endif()
+
 
         if (EXISTS ${CMAKE_OBJDUMP})
                 add_custom_command(
