--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ if(BUILD_PROJECT)
 
         add_executable(${PROJECT_NAME}
                 ${CMAKE_SOURCE_DIR}/app/source/main.cpp
+                ${CMAKE_SOURCE_DIR}/app/source/admin_system.cpp
         )
 
         target_include_directories(${PROJECT_NAME} PRIVATE
