--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -16,6 +16,7 @@ if(${FILES_IN_DIR} GREATER 0)
         add_library(gui
                 OBJECT
                 ${PROJECT_SOURCE_DIR}/source/main_window.cpp
+                ${PROJECT_SOURCE_DIR}/source/business_info_page.cpp
         )
 
         target_include_directories(gui
