TEST: Updated the makefile to use CppUTest virtual path
Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -40,5 +40,6 @@ MOCKS_SRC_DIRS := \
 
 CPPUTEST_USE_EXTENSIONS := Y
 CPPUTEST_USE_GCOV := Y
+CPPUTEST_USE_VPATH := Y
 CPPUTEST_USE_MEM_LEAK_DETECTION := Y
 -include $(CPPUTEST_HOME)/build/MakefileWorker.mk
