DATA: Adds the business data structure
- refactored the business data structure.
- updated gitignore.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,10 @@
 build
 
 # Created test folders
-test/obj
+test/objs
+test/lib
 test/coverage
-test/gcov
+test/admin-system
 
 # Vim .swp files
 *.swp
