INTIGRATE: Integrates the business data
- integrate the business data with the business page
- modified CMakeLists.txt files to reflect the interagtion

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,12 +86,12 @@ if(BUILD_PROJECT)
         #            message(STATUS "Directory features, does not exist")
         #        endif()
 
-        #        if(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/data)
-        #            add_subdirectory(${CMAKE_SOURCE_DIR}/data)
-        #            target_link_libraries(${PROJECT_NAME} PRIVATE data)
-        #        else()
-        #            message(STATUS "Directory features, does not exist")
-        #        endif()
+        if(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/data)
+            add_subdirectory(${CMAKE_SOURCE_DIR}/data)
+            target_link_libraries(${PROJECT_NAME} PRIVATE data)
+        else()
+            message(STATUS "Directory features, does not exist")
+        endif()
 
 
         if (EXISTS ${CMAKE_OBJDUMP})
