--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,12 +79,12 @@ if(BUILD_PROJECT)
             message(STATUS "Directory features, does not exist")
         endif()
 
-        #        if(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/features)
-        #            add_subdirectory(${CMAKE_SOURCE_DIR}/features)
-        #            target_link_libraries(${PROJECT_NAME} PRIVATE features)
-        #        else()
-        #            message(STATUS "Directory features, does not exist")
-        #        endif()
+        if(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/features)
+            add_subdirectory(${CMAKE_SOURCE_DIR}/features)
+            target_link_libraries(${PROJECT_NAME} PRIVATE features)
+        else()
+            message(STATUS "Directory features, does not exist")
+        endif()
 
         if(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/data)
             add_subdirectory(${CMAKE_SOURCE_DIR}/data)
