DATA: Business info data verification
- added specific email format checks for verification.
- added object copy and move abilities.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -9,8 +9,8 @@
 PROJECT_DIR :=$(realpath ..)
 TEST_DIR :=$(realpath .)
 TEST_TARGET := admin-system
-CPPUTEST_EXE_FLAGS := -c
-CPPUTEST_CXXFLAGS :=-std=c++23
+CPPUTEST_EXE_FLAGS :=-c
+CPPUTEST_CXXFLAGS :=-std=c++23 
 
 
 SRC_DIRS :=\
@@ -41,5 +41,5 @@ MOCKS_SRC_DIRS := \
 CPPUTEST_USE_EXTENSIONS := Y
 CPPUTEST_USE_GCOV := Y
 CPPUTEST_USE_VPATH := Y
-CPPUTEST_USE_MEM_LEAK_DETECTION := Y
+CPPUTEST_USE_MEM_LEAK_DETECTION := N
 -include $(CPPUTEST_HOME)/build/MakefileWorker.mk
