REFACTOR: Major refactoring of business feature
- removed the data directory.
- integrated the business_data structure with the
  business feature. It reduces the complexity it
  would have otherwise added through implecit
  requriements.
- renamed the business_feature to business.
- updated the application dependancy diagram.
- refactored the business_info_page with the updated
  business feature.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/features/CMakeLists.txt
+++ b/features/CMakeLists.txt
@@ -16,7 +16,7 @@ list(LENGTH RESULT FILES_IN_DIR)
 if(${FILES_IN_DIR} GREATER 0)
         add_library(features 
                 OBJECT
-                ${PROJECT_SOURCE_DIR}/source/business_feature.cpp
+                ${PROJECT_SOURCE_DIR}/source/business.cpp
         )
 
         target_include_directories(features 
