--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ if(BUILD_PROJECT)
         target_include_directories(${PROJECT_NAME} PRIVATE
                 ${CMAKE_SOURCE_DIR}/app/include
                 ${CMAKE_SOURCE_DIR}/gui/include
-                ${CMAKE_SOURCE_DIR}/data/include
+                ${CMAKE_SOURCE_DIR}/storage/include
                 ${CMAKE_SOURCE_DIR}/features/include
                 ${GTKMM_INCLUDE_DIRS}
         )
@@ -79,20 +79,19 @@ if(BUILD_PROJECT)
             message(STATUS "Directory features, does not exist")
         endif()
 
+        if(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/storage)
+            add_subdirectory(${CMAKE_SOURCE_DIR}/storage)
+            target_link_libraries(${PROJECT_NAME} PRIVATE storage)
+        else()
+            message(STATUS "Directory storage, does not exist")
+        endif()
+
         if(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/features)
             add_subdirectory(${CMAKE_SOURCE_DIR}/features)
             target_link_libraries(${PROJECT_NAME} PRIVATE features)
         else()
             message(STATUS "Directory features, does not exist")
         endif()
-
-        if(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/data)
-            add_subdirectory(${CMAKE_SOURCE_DIR}/data)
-            target_link_libraries(${PROJECT_NAME} PRIVATE data)
-        else()
-            message(STATUS "Directory features, does not exist")
-        endif()
-
 
         if (EXISTS ${CMAKE_OBJDUMP})
                 add_custom_command(
