--- a/features/CMakeLists.txt
+++ b/features/CMakeLists.txt
@@ -24,7 +24,7 @@ if(${FILES_IN_DIR} GREATER 0)
                 ${PROJECT_SOURCE_DIR}/include/
                 PUBLIC
                 ${CMAKE_SOURCE_DIR}/app/include
-                ${CMAKE_SOURCE_DIR}/data/include
+                ${CMAKE_SOURCE_DIR}/storage/include
         )
 else ()
         message(STATUS "There are no files in, features/source.")
