--- a/storage/CMakeLists.txt
+++ b/storage/CMakeLists.txt
@@ -1,32 +1,28 @@
 ############################################################################
-# Contents: Graphical User Interface CMakeLists.txt file
+# Contents: Mass Storage Interface CMakeLists.txt file
 # Author: Dawid Blom
 # Date: November 13, 2024
 #
 # NOTE:
 ############################################################################
 cmake_minimum_required(VERSION 3.25)
-project(target-gui VERSION 0.0.1 LANGUAGES CXX C)
+project(target-storage VERSION 0.0.1 LANGUAGES CXX C)
 
 
 file(GLOB RESULT ${PROJECT_SOURCE_DIR}/source)
 list(LENGTH RESULT FILES_IN_DIR)
 if(${FILES_IN_DIR} GREATER 0)
 
-        add_library(gui
+        add_library(storage
                 OBJECT
-                ${PROJECT_SOURCE_DIR}/source/main_window.cpp
-                ${PROJECT_SOURCE_DIR}/source/business_info_page.cpp
+                ${PROJECT_SOURCE_DIR}/source/sql.cpp
         )
 
-        target_include_directories(gui
+        target_include_directories(storage
                 PRIVATE
-                ${PROJECT_SOURCE_DIR}/include/
-                ${GTKMM_INCLUDE_DIRS}
+                ${PROJECT_SOURCE_DIR}/include
                 PUBLIC
                 ${CMAKE_SOURCE_DIR}/app/include
-                ${CMAKE_SOURCE_DIR}/storage/include
-                ${CMAKE_SOURCE_DIR}/features/include
         )
 else ()
         message(STATUS "There are no files in, gui/source.")
