REFACTOR: Major refactoring of system structure
- Removed the idea of having two different GUIs in one.
  Therefore, at the moment each instance of the system
  will represent a single business.

  **Reason**:
  - GTK does not have the ability to separate two business
    concepts within a single GUI instance. For example, when
    you save business data for T.M.E it also saves the same data
    for T.C.E. There is not atomic operations that have been found
    as of now.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ if(BUILD_PROJECT)
         target_include_directories(${PROJECT_NAME} PRIVATE
                 ${CMAKE_SOURCE_DIR}/app/include
                 ${CMAKE_SOURCE_DIR}/gui/include
+                ${CMAKE_SOURCE_DIR}/data/include
                 ${CMAKE_SOURCE_DIR}/storage/include
                 ${CMAKE_SOURCE_DIR}/features/include
                 ${GTKMM_INCLUDE_DIRS}
@@ -76,7 +77,14 @@ if(BUILD_PROJECT)
             add_subdirectory(${CMAKE_SOURCE_DIR}/gui)
             target_link_libraries(${PROJECT_NAME} PRIVATE gui)
         else()
-            message(STATUS "Directory features, does not exist")
+            message(STATUS "Directory gui, does not exist")
+        endif()
+
+        if(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/data)
+            add_subdirectory(${CMAKE_SOURCE_DIR}/data)
+            target_link_libraries(${PROJECT_NAME} PRIVATE data)
+        else()
+            message(STATUS "Directory data, does not exist")
         endif()
 
         if(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/storage)
