--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -4,28 +4,23 @@
 # Date: September 15, 2023
 #
 # NOTE:
-# This file is the CMakeLists.txt for the feature sub branch file, containing
-# the source and header files of the feautre sub branch.
 ############################################################################
 cmake_minimum_required(VERSION 3.25)
-project(target-features VERSION 0.0.1 LANGUAGES CXX C)
+project(target-data VERSION 0.0.1 LANGUAGES CXX C)
 
 
 file(GLOB RESULT ${PROJECT_SOURCE_DIR}/source)
 list(LENGTH RESULT FILES_IN_DIR)
 if(${FILES_IN_DIR} GREATER 0)
-        add_library(features 
+        add_library(data 
                 OBJECT
-                ${PROJECT_SOURCE_DIR}/source/business_info.cpp
+                ${PROJECT_SOURCE_DIR}/source/business_data.cpp
         )
 
-        target_include_directories(features 
+        target_include_directories(data 
                 PRIVATE
                 ${PROJECT_SOURCE_DIR}/include/
-                PUBLIC
-                ${CMAKE_SOURCE_DIR}/data/include
-                ${CMAKE_SOURCE_DIR}/storage/include
         )
 else ()
-        message(STATUS "There are no files in, features/source.")
+        message(STATUS "There are no files in, data/source.")
 endif()
