--- a/test/Makefile
+++ b/test/Makefile
@@ -15,6 +15,7 @@ CPPUTEST_CXXFLAGS :=-std=c++23
 
 SRC_DIRS :=\
 	$(PROJECT_DIR)/api/source\
+	$(PROJECT_DIR)/data/source\
 	$(PROJECT_DIR)/storage/source\
 	$(PROJECT_DIR)/features/source\
 
@@ -22,6 +23,7 @@ SRC_DIRS :=\
 INCLUDE_DIRS :=\
 	$(CPPUTEST_HOME)/include\
 	$(PROJECT_DIR)/app/include\
+	$(PROJECT_DIR)/data/include\
 	$(PROJECT_DIR)/storage/include\
 	$(PROJECT_DIR)/features/include\
 	$(PROJECT_DIR)/storage/mocks/include\
@@ -30,6 +32,7 @@ INCLUDE_DIRS :=\
 
 TEST_SRC_DIRS :=\
 	$(TEST_DIR)\
+	$(PROJECT_DIR)/data/tests\
 	$(PROJECT_DIR)/storage/tests\
 	$(PROJECT_DIR)/features/tests\
 
