CLEAN-UP: Cleans up the business info page code
Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -13,8 +13,8 @@ CPPUTEST_EXE_FLAGS :=-c
 CPPUTEST_CXXFLAGS :=-std=c++23 
 
 
+
 SRC_DIRS :=\
-	$(PROJECT_DIR)/api/source\
 	$(PROJECT_DIR)/data/source\
 	$(PROJECT_DIR)/storage/source\
 	$(PROJECT_DIR)/features/source\
@@ -22,11 +22,10 @@ SRC_DIRS :=\
 
 INCLUDE_DIRS :=\
 	$(CPPUTEST_HOME)/include\
-	$(PROJECT_DIR)/app/include\
 	$(PROJECT_DIR)/data/include\
 	$(PROJECT_DIR)/storage/include\
-	$(PROJECT_DIR)/features/include\
 	$(PROJECT_DIR)/storage/mocks/include\
+	$(PROJECT_DIR)/features/include\
 	$(PROJECT_DIR)/features/mocks/include\
 
 
@@ -45,5 +44,6 @@ MOCKS_SRC_DIRS := \
 CPPUTEST_USE_EXTENSIONS := Y
 CPPUTEST_USE_GCOV := Y
 CPPUTEST_USE_VPATH := Y
+CPPUTEST_USE_STD_CPP_LIB := Y
 CPPUTEST_USE_MEM_LEAK_DETECTION := N
 -include $(CPPUTEST_HOME)/build/MakefileWorker.mk
