--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -17,6 +17,7 @@ if(${FILES_IN_DIR} GREATER 0)
                 OBJECT
                 ${PROJECT_SOURCE_DIR}/source/main_window.cpp
                 ${PROJECT_SOURCE_DIR}/source/business_info_page.cpp
+                ${PROJECT_SOURCE_DIR}/source/client_register_page.cpp
         )
 
         target_include_directories(gui
