FEATURE: Client registration feature
- test drove the client registration feature.
- mocked out the sql connection for testing.

IMPORTANT:
this feature is not at all finished. We require the
database before we finalize this feature.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/features/CMakeLists.txt
+++ b/features/CMakeLists.txt
@@ -17,6 +17,7 @@ if(${FILES_IN_DIR} GREATER 0)
         add_library(features 
                 OBJECT
                 ${PROJECT_SOURCE_DIR}/source/business_info.cpp
+                ${PROJECT_SOURCE_DIR}/source/client_register.cpp
         )
 
         target_include_directories(features 
