GUI: Integration of client register page
- integrated the client register feature
  with the client register page.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -15,6 +15,7 @@ if(${FILES_IN_DIR} GREATER 0)
         add_library(data 
                 OBJECT
                 ${PROJECT_SOURCE_DIR}/source/business_data.cpp
+                ${PROJECT_SOURCE_DIR}/source/client_data.cpp
         )
 
         target_include_directories(data 
