--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -16,6 +16,8 @@ if(${FILES_IN_DIR} GREATER 0)
                 OBJECT
                 ${PROJECT_SOURCE_DIR}/source/business_data.cpp
                 ${PROJECT_SOURCE_DIR}/source/client_data.cpp
+                ${PROJECT_SOURCE_DIR}/source/invoice_data.cpp
+                ${PROJECT_SOURCE_DIR}/source/column_data.cpp
         )
 
         target_include_directories(data 
