UTILITY: Adds a file reader class
- opens a text or html file, reads the data, and returns a string.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/utility/CMakeLists.txt
+++ b/utility/CMakeLists.txt
@@ -22,6 +22,8 @@ if(${FILES_IN_DIR} GREATER 0)
         target_include_directories(utility 
                 PRIVATE
                 ${PROJECT_SOURCE_DIR}/include/
+                PUBLIC
+                ${CMAKE_SOURCE_DIR}/app/include
         )
 else ()
         message(STATUS "There are no files in, utility/source.")
