--- a/test/Makefile
+++ b/test/Makefile
@@ -10,6 +10,14 @@ PROJECT_DIR :=$(realpath ..)
 TEST_DIR :=$(realpath .)
 TEST_TARGET := admin-system
 CPPUTEST_EXE_FLAGS :=-c
+
+########################################################################
+# Uncomment to exclude the email_test group from being tested.
+#
+# NOTE: Ensure this line is commented when pushing code to the remote.
+# 
+CPPUTEST_EXE_FLAGS +=-xg "email_test"
+
 CPPUTEST_CXXFLAGS :=-std=c++23 
 CPPUTEST_CFLAGS := $(shell pkg-config -cflags cairo) $(shell curl-config --cflags)
 CPPUTEST_LDFLAGS := $(shell pkg-config --libs cairo) $(shell curl-config --libs)
