FEATURE: Integrates the file class with features
Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/features/CMakeLists.txt
+++ b/features/CMakeLists.txt
@@ -30,6 +30,7 @@ if(${FILES_IN_DIR} GREATER 0)
                 PUBLIC
                 ${CMAKE_SOURCE_DIR}/data/include
                 ${CMAKE_SOURCE_DIR}/storage/include
+                ${CMAKE_SOURCE_DIR}/utility/include
         )
 else ()
         message(STATUS "There are no files in, features/source.")
