REFACTOR: Client emails can be more than one.
Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ if(BUILD_PROJECT)
                 ${CMAKE_SOURCE_DIR}/data/include
                 ${CMAKE_SOURCE_DIR}/storage/include
                 ${CMAKE_SOURCE_DIR}/features/include
+                ${CMAKE_SOURCE_DIR}/utility/include
                 ${GTKMM_INCLUDE_DIRS}
                 ${CURL_INCLUDE_DIR}
         )
