--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -18,6 +18,7 @@ if(${FILES_IN_DIR} GREATER 0)
                 ${PROJECT_SOURCE_DIR}/source/client_data.cpp
                 ${PROJECT_SOURCE_DIR}/source/invoice_data.cpp
                 ${PROJECT_SOURCE_DIR}/source/column_data.cpp
+                ${PROJECT_SOURCE_DIR}/source/email_data.cpp
         )
 
         target_include_directories(data 
