refactor: Moved the invoice_page files
Done:
- Moved the invoice_page .h/.cpp file to gui.
- Force the invoice list to go to the newest invoice in the list.

Bugs:
- The add() does not add the grand total to the invoices.
- The word slicer utility does not cut long words up.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -17,6 +17,7 @@ if(${FILES_IN_DIR} GREATER 0)
                 OBJECT
                 ${PROJECT_SOURCE_DIR}/source/main_window.cpp
                 ${PROJECT_SOURCE_DIR}/source/business_page.cpp
+                ${PROJECT_SOURCE_DIR}/source/invoice_page.cpp
                 ${PROJECT_SOURCE_DIR}/source/statement_page.cpp
                 ${PROJECT_SOURCE_DIR}/source/client_register_page.cpp
         )
