refactor: Extracts unit tests
Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -27,6 +27,8 @@ CPPUTEST_LDFLAGS += $(shell pkg-config --libs cairomm-1.16 gtkmm-4.0 poppler-cpp
 CPPUTEST_LDFLAGS += $(shell curl-config --libs)
 
 SRC_DIRS :=\
+	$(PROJECT_DIR)/app/source\
+	$(PROJECT_DIR)/gui/source\
 	$(PROJECT_DIR)/data/source\
 	$(PROJECT_DIR)/utility/source\
 	$(PROJECT_DIR)/storage/source\
@@ -36,6 +38,7 @@ SRC_DIRS :=\
 INCLUDE_DIRS :=\
 	$(CPPUTEST_HOME)/include\
 	$(PROJECT_DIR)/app/include\
+	$(PROJECT_DIR)/gui/include\
 	$(PROJECT_DIR)/data/include\
 	$(PROJECT_DIR)/utility/include\
 	$(PROJECT_DIR)/storage/include\
@@ -47,6 +50,7 @@ INCLUDE_DIRS :=\
 
 TEST_SRC_DIRS :=\
 	$(TEST_DIR)\
+	$(PROJECT_DIR)/gui/tests\
 	$(PROJECT_DIR)/data/tests\
 	$(PROJECT_DIR)/utility/tests\
 	$(PROJECT_DIR)/storage/tests\
@@ -55,6 +59,7 @@ TEST_SRC_DIRS :=\
 
 
 MOCKS_SRC_DIRS := \
+	$(PROJECT_DIR)/gui/mocks/source\
 	$(PROJECT_DIR)/utility/mocks/source\
 	$(PROJECT_DIR)/storage/mocks/source\
 	$(PROJECT_DIR)/features/mocks/source\
