wip: Implemented the statement invoice view
Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -17,8 +17,9 @@ CPPUTEST_EXE_FLAGS +=-c -v
 # NOTE: Ensure this line is uncommented when pushing code to the remote.
 # 
 #CPPUTEST_EXE_FLAGS +=-xg "email_test"
-CPPUTEST_EXE_FLAGS +=-xg "client_invoice_test"
-# CPPUTEST_EXE_FLAGS +=-sg "statement_columns_test"
+# CPPUTEST_EXE_FLAGS +=-xg "client_invoice_test"
+# CPPUTEST_EXE_FLAGS +=-sg "client_invoice_test"
+CPPUTEST_EXE_FLAGS +=-sg "invoice_pdf_view_test"
 
 CPPUTEST_CXXFLAGS +=-std=c++23 
 CPPUTEST_CXXFLAGS += $(shell pkg-config --cflags cairomm-1.16 gtkmm-4.0 poppler-cpp)
@@ -42,6 +43,7 @@ INCLUDE_DIRS :=\
 	$(PROJECT_DIR)/app/include\
 	$(PROJECT_DIR)/gui/include\
 	$(PROJECT_DIR)/data/include\
+	$(PROJECT_DIR)/data/mocks/include\
 	$(PROJECT_DIR)/utility/include\
 	$(PROJECT_DIR)/storage/include\
 	$(PROJECT_DIR)/storage/mocks/include\
@@ -62,6 +64,7 @@ TEST_SRC_DIRS :=\
 
 MOCKS_SRC_DIRS := \
 	$(PROJECT_DIR)/gui/mocks/source\
+	$(PROJECT_DIR)/data/mocks/source\
 	$(PROJECT_DIR)/utility/mocks/source\
 	$(PROJECT_DIR)/storage/mocks/source\
 	$(PROJECT_DIR)/features/mocks/source\
