--- a/test/Makefile
+++ b/test/Makefile
@@ -16,10 +16,12 @@ CPPUTEST_EXE_FLAGS +=-c -v
 #
 # NOTE: Ensure this line is uncommented when pushing code to the remote.
 # 
-#CPPUTEST_EXE_FLAGS +=-xg "email_test"
+CPPUTEST_EXE_FLAGS +=-xg "email_test client_invoice_test"
 # CPPUTEST_EXE_FLAGS +=-xg "client_invoice_test"
 # CPPUTEST_EXE_FLAGS +=-sg "client_invoice_test"
-CPPUTEST_EXE_FLAGS +=-sg "invoice_pdf_view_test"
+# CPPUTEST_EXE_FLAGS +=-sg "invoice_pdf_view_test"
+# CPPUTEST_EXE_FLAGS +=-sg "pdf_statement_data_test"
+# CPPUTEST_EXE_FLAGS +=-sg "pdf_window_test"
 
 CPPUTEST_CXXFLAGS +=-std=c++23 
 CPPUTEST_CXXFLAGS += $(shell pkg-config --cflags cairomm-1.16 gtkmm-4.0 poppler-cpp)
