feature: Docker container gui support
- Updated the Dockerfile to support gui interactions.
- Updated the install script for local dependencies.
- Updated the test.sh script for interacting with the gui remotely.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -16,7 +16,7 @@ CPPUTEST_EXE_FLAGS +=-c -v
 #
 # NOTE: Ensure this line is uncommented when pushing code to the remote.
 # 
-CPPUTEST_EXE_FLAGS +=-xg "email_test client_invoice_test"
+# CPPUTEST_EXE_FLAGS +=-xg "email_test client_invoice_test"
 # CPPUTEST_EXE_FLAGS +=-xg "client_invoice_test"
 # CPPUTEST_EXE_FLAGS +=-sg "client_invoice_test"
 # CPPUTEST_EXE_FLAGS +=-sg "invoice_pdf_view_test"
