--- a/test/Makefile
+++ b/test/Makefile
@@ -25,6 +25,7 @@ CPPUTEST_EXE_FLAGS +=-c -v
 # CPPUTEST_EXE_FLAGS +=-sg "sub_button_test"
 # CPPUTEST_EXE_FLAGS +=-sg "stack_test"
 # CPPUTEST_EXE_FLAGS +=-sg "gui_part_search_bar"
+# CPPUTEST_EXE_FLAGS +=-sg "statement_pdf_view_test"
 
 CPPUTEST_CXXFLAGS +=-std=c++23 
 CPPUTEST_CXXFLAGS += $(shell pkg-config --cflags cairomm-1.16 gtkmm-4.0 poppler-cpp)
