--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ if(BUILD_PROJECT)
 
         add_executable(${PROJECT_NAME}
                 ${CMAKE_SOURCE_DIR}/app/source/main.cpp
-                ${CMAKE_SOURCE_DIR}/app/source/admin_system.cpp
+                ${CMAKE_SOURCE_DIR}/app/source/mint_bill.cpp
         )
 
         target_include_directories(${PROJECT_NAME} PRIVATE
