--- a/.github/workflows/admin-system.yml
+++ b/.github/workflows/admin-system.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Build
-      run: scripts/mintbill.sh --build=host
+      run: scripts/mint-bill.sh --build=host
 
   Statistics:
     runs-on: ubuntu-latest
@@ -46,7 +46,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Statistics
-      run: scripts/mintbill.sh --stats=lc
+      run: scripts/mint-bill.sh --stats=lc
 
   StaticCodeAnalysis:
     runs-on: ubuntu-latest
@@ -62,7 +62,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Static Code Analysis
-      run: scripts/mintbill.sh --test=sca
+      run: scripts/mint-bill.sh --test=sca
 
   UnitTest:
     runs-on: ubuntu-latest
@@ -78,7 +78,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Unit Tests
-      run: scripts/mintbill.sh --test=unit
+      run: scripts/mint-bill.sh --test=unit
       env:
         CPPUTEST_HOME: ${{ vars.CPPUTEST_HOME  }}
 
@@ -96,4 +96,4 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Code Coverage
-      run: scripts/mintbill.sh --test=coverage
+      run: scripts/mint-bill.sh --test=coverage
