feature: Abstracted pdf generation
- Created a pdf interface.
- Made invoice_pdf inherit from the interface.
- Created a statemnt_pdf header file.

NOTE:
- All code has been tested.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/features/CMakeLists.txt
+++ b/features/CMakeLists.txt
@@ -16,8 +16,8 @@ list(LENGTH RESULT FILES_IN_DIR)
 if(${FILES_IN_DIR} GREATER 0)
         add_library(features
                 OBJECT
-                ${PROJECT_SOURCE_DIR}/source/pdf.cpp
                 ${PROJECT_SOURCE_DIR}/source/email.cpp
+                ${PROJECT_SOURCE_DIR}/source/invoice_pdf.cpp
                 ${PROJECT_SOURCE_DIR}/source/business_info.cpp
                 ${PROJECT_SOURCE_DIR}/source/client_invoice.cpp
                 ${PROJECT_SOURCE_DIR}/source/client_register.cpp
