feature: Statement page pdf generation
Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -23,7 +23,9 @@ CPPUTEST_EXE_FLAGS +=-c -v
 # CPPUTEST_EXE_FLAGS +=-sg "gui_part_button"
 # CPPUTEST_EXE_FLAGS +=-sg "invoice_pdf_view_test"
 # CPPUTEST_EXE_FLAGS +=-sg "statement_page_test"
-CPPUTEST_EXE_FLAGS +=-sg "printer_test"
+# CPPUTEST_EXE_FLAGS +=-sg "printer_test"
+# CPPUTEST_EXE_FLAGS +=-sg "generate_invoice_pdf_test"
+# CPPUTEST_EXE_FLAGS +=-sg "generate_statement_pdf_test"
 # CPPUTEST_EXE_FLAGS +=-sg "statement_pdf_view_test"
 # CPPUTEST_EXE_FLAGS +=-sg "statement_page_column_view_test"
 
