--- a/test/Makefile
+++ b/test/Makefile
@@ -23,7 +23,7 @@ CPPUTEST_EXE_FLAGS +=-c -v
 # CPPUTEST_EXE_FLAGS +=-sg "gui_part_button"
 # CPPUTEST_EXE_FLAGS +=-sg "invoice_pdf_view_test"
 # CPPUTEST_EXE_FLAGS +=-sg "statement_page_test"
-# CPPUTEST_EXE_FLAGS +=-sg "printer_test"
+# CPPUTEST_EXE_FLAGS +=-sg "gui_part_dialog"
 # CPPUTEST_EXE_FLAGS +=-sg "page_range_test"
 # CPPUTEST_EXE_FLAGS +=-sg "generate_invoice_pdf_test"
 # CPPUTEST_EXE_FLAGS +=-sg "generate_statement_pdf_test"
