feature: SQLite3 wrapper api
- implemented a wrapper API for sqlite3 that handles USERT and SELECT
  statements.
- converted the database to an encrypted database using sqlcipher.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/storage/CMakeLists.txt
+++ b/storage/CMakeLists.txt
@@ -13,10 +13,12 @@ list(LENGTH RESULT FILES_IN_DIR)
 if(${FILES_IN_DIR} GREATER 0)
         add_library(storage
                 OBJECT
-                ${PROJECT_SOURCE_DIR}/source/sql.cpp
+                ${PROJECT_SOURCE_DIR}/source/sqlite.cpp
         )
 
         target_include_directories(storage
+                PUBLIC
+                ${CMAKE_SOURCE_DIR}/app/include
                 PRIVATE
                 ${PROJECT_SOURCE_DIR}/include
         )
